package com.wali.live.proto;

option java_package = "com.wali.live.proto";
option java_outer_classname = "RankListProto";

message RankUserInfo{
     required uint64 zuid =1;
     optional uint64 avatar =2; //头像
     optional string nickname=3;//昵称
     optional string sign=4;//签名
     optional uint32 gender=5;//性别
     optional uint32 level=6;//等级
     optional bool isFocused=7;//是否被关注
     optional bool isBothwayFollowing=11;//是否双向关注
     optional uint32 certification_type=12;//用户认证类型，1：新浪微博，2：官方账号，3：推荐认证，4：小米认证
     optional bool isBlocked=13;//是否拉黑
     optional bool is_playing=14; //是否正在直播
     optional string redirect_url=15; //跳转地址
     optional string rank_info=16; //文案(如: xxxx星票)
}


//1. cmd: zhibo.ranklist.query
message RankListReq{
    required uint64 zuid = 1;
    required uint32 type = 2; //排行榜类型. 目前支持的type: 1=星票, 2=粉丝, 3=礼物, 4=互动
    required uint32 sub_type = 3; //子类型. 1=日榜, 2=周榜
    required uint32 offset = 4; //分页偏移量
    required uint32 limit = 5; //每页数量
}

message RankListRsp{
    required uint32 ret = 1; //返回码
    required bool has_more = 2; //是否还有更多
    repeated RankUserInfo rank_users = 3; //排行榜主播
}

message SubRankListConfig{
    required uint32 sub_rank_type = 1; // 1=日榜, 2=周榜
    required string sub_rank_name = 2;
    optional uint32 sub_rank_ui_style = 3; //榜单样式. 1 日榜样式，2周榜样式
}

message RankListConfig{
    required uint32 rank_type = 1; // 1=星票, 2=粉丝, 3=礼物, 4=互动
    required string rank_name = 2; // 排行榜名称
    repeated SubRankListConfig sub_ranks = 3; //子排行榜类型.
}

//2. cmd. zhibo.ranklist.config
message RankListConfigReq{
    required uint64 zuid = 1;
}

message RankListConfigRsp{
    required uint32 ret = 1; //返回码
    repeated RankListConfig configs = 2; // 排行榜配置列表
}